--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!--
-  This project is licensed under the MIT License.
-  You are free to use, modify, and distribute this code without permission.
-
-  ⚠️ However, please do not remove author credits.
-  ✉️ For permissions, queries, or collaborations, contact:
-      parmarmohansingh26@gmail.com
+<!--   
+  ------------------------------------------------------------  
+  © 2025 MONXCODE™ | All Rights Reserved  
+  Created by: Mohan Singh Parmar  
+  
+  This project (including code, design, and logic) is protected  
+  under proprietary rights. Unauthorized copying, editing,   
+  reuploading, or commercial usage is strictly prohibited.  
+  
+  For license, permission, or collaborations:  
+  📩 Email: parmarmohansingh26@gmail.com  
+  ------------------------------------------------------------  
 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
