--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
-  <title> Soft Clock + Calendar</title>
+  <title> Soft Clock & Calendar</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <style>
