--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   📩 Email: parmarmohansingh26@gmail.com  
   ------------------------------------------------------------  
 -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -227,9 +226,76 @@ body {
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+.popup-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.popup-box {
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(15px);
+  padding: 20px;
+  border-radius: 15px;
+  width: 90%;
+  max-width: 300px;
+  text-align: center;
+  animation: popFade 0.3s ease;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+.popup-box h3 {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+}
+
+.popup-box input {
+  width: 100%;
+  padding: 8px;
+  border-radius: 8px;
+  border: 1px solid #aaa;
+  margin-bottom: 12px;
+  font-size: 1rem;
+}
+
+.popup-buttons button {
+  padding: 7px 14px;
+  border: none;
+  border-radius: 8px;
+  margin: 0 5px;
+  font-weight: bold;
+  cursor: pointer;
+  background: #111;
+  color: #fff;
+}
+
+.popup-buttons button:hover {
+  background: #333;
+}
+
+@keyframes popFade {
+  from {transform: scale(0.8); opacity: 0;}
+  to {transform: scale(1); opacity: 1;}
+}
   </style>
 </head>
 <body>
+  <div class="popup-overlay" id="popupOverlay">
+  <div class="popup-box">
+    <h3>📌 Mark This Day</h3>
+    <p id="popupDate"></p>
+    <input type="text" id="eventInput" placeholder="What is Special" />
+    <div class="popup-buttons">
+      <button onclick="saveEvent()">Save</button>
+      <button onclick="closePopup()">Cancel</button>
+    </div>
+  </div>
+</div>
   <div class="container" id="mainContainer">
     <div class="clock" id="clock"></div>
     <div class="day-info" id="dayInfo"></div>
@@ -251,69 +317,130 @@ body {
 </div>
     
   </div>
+<script>
+  function updateClock() {
+    const now = new Date();
+    const h = String(now.getHours()).padStart(2, '0');
+    const m = String(now.getMinutes()).padStart(2, '0');
+    const s = String(now.getSeconds()).padStart(2, '0');
+    document.getElementById("clock").innerHTML = `
+      <span>${h}</span><span>:</span><span>${m}</span><span>:</span><span>${s}</span>
+    `;
+    const day = now.toLocaleString('default', { weekday: 'long' });
+    const date = now.getDate();
+    document.getElementById("dayInfo").textContent = `${day}, ${date}`;
+  }
 
-  <script>
-    function updateClock() {
-      const now = new Date();
-      const h = String(now.getHours()).padStart(2, '0');
-      const m = String(now.getMinutes()).padStart(2, '0');
-      const s = String(now.getSeconds()).padStart(2, '0');
-      document.getElementById("clock").innerHTML = `
-        <span>${h}</span><span>:</span><span>${m}</span><span>:</span><span>${s}</span>
-      `;
-      const day = now.toLocaleString('default', { weekday: 'long' });
-      const date = now.getDate();
-      document.getElementById("dayInfo").textContent = `${day}, ${date}`;
-    }
-    setInterval(updateClock, 1000);
-    updateClock();
+  setInterval(updateClock, 1000);
+  updateClock();
 
-    const calendar = document.getElementById("calendarContainer");
-    const calendarDays = document.getElementById("calendarDays");
-    const monthYear = document.getElementById("monthYear");
-    let currentDate = new Date();
+  const monthYear = document.getElementById("monthYear");
+  const calendarDays = document.getElementById("calendarDays");
+  const calendar = document.getElementById("calendarContainer");
+  const popupOverlay = document.getElementById("popupOverlay");
+  const popupDate = document.getElementById("popupDate");
+  const eventInput = document.getElementById("eventInput");
+  const popupButtons = document.querySelector(".popup-buttons");
 
-    function renderCalendar(date) {
-      const year = date.getFullYear();
-      const month = date.getMonth();
-      const firstDay = new Date(year, month, 1).getDay();
-      const lastDate = new Date(year, month + 1, 0).getDate();
+  const savedEvents = JSON.parse(localStorage.getItem("savedEvents") || "{}");
+  let currentDate = new Date();
+  let activeDateKey = "";
+  let isEditing = false;
 
-      monthYear.textContent = date.toLocaleString('default', { month: 'long' }) + ' ' + year;
-      calendarDays.innerHTML = "";
+  function renderCalendar(date) {
+    const year = date.getFullYear();
+    const month = date.getMonth();
+    const firstDay = new Date(year, month, 1).getDay();
+    const lastDate = new Date(year, month + 1, 0).getDate();
 
-      for (let i = 0; i < firstDay; i++) {
-        calendarDays.innerHTML += `<div></div>`;
-      }
+    monthYear.textContent = date.toLocaleString('default', { month: 'long' }) + ' ' + year;
+    calendarDays.innerHTML = "";
 
-      for (let d = 1; d <= lastDate; d++) {
-        const isToday = d === new Date().getDate() &&
-                        month === new Date().getMonth() &&
-                        year === new Date().getFullYear();
-
-        calendarDays.innerHTML += `<div class="${isToday ? 'today' : ''}">${d}</div>`;
-      }
-    }
-
-    renderCalendar(currentDate);
-
-    function nextMonth(e) {
-      e.stopPropagation();
-      currentDate.setMonth(currentDate.getMonth() + 1);
-      renderCalendar(currentDate);
+    for (let i = 0; i < firstDay; i++) {
+      calendarDays.innerHTML += `<div></div>`;
     }
 
-    function prevMonth(e) {
-      e.stopPropagation();
-      currentDate.setMonth(currentDate.getMonth() - 1);
-      renderCalendar(currentDate);
+    for (let d = 1; d <= lastDate; d++) {
+      const fullDate = `${year}-${String(month + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}`;
+      const isToday = d === new Date().getDate() &&
+                      month === new Date().getMonth() &&
+                      year === new Date().getFullYear();
+
+      const eventText = savedEvents[fullDate];
+      calendarDays.innerHTML += `
+        <div class="${isToday ? 'today' : ''}" 
+             style="${eventText ? 'background:#4CAF50; color:white; font-weight:bold;' : ''}"
+             title="${eventText || ''}"
+             data-date="${fullDate}">
+          ${d}
+        </div>`;
     }
 
-    document.getElementById("mainContainer").addEventListener("click", function(e) {
-      if (!e.target.closest(".calendar") && !e.target.closest("button") && !e.target.closest(".days div")) {
-        calendar.classList.toggle("expanded");
-      }
+    document.querySelectorAll(".days div[data-date]").forEach(div => {
+      div.onclick = () => {
+        activeDateKey = div.getAttribute("data-date");
+        isEditing = savedEvents[activeDateKey] !== undefined;
+
+        popupDate.textContent = activeDateKey;
+        eventInput.value = savedEvents[activeDateKey] || "";
+
+        // Update popup buttons
+        popupButtons.innerHTML = isEditing ? `
+          <button onclick="saveEvent()">Update</button>
+          <button onclick="deleteEvent()">Remove</button>
+          <button onclick="closePopup()">Cancel</button>
+        ` : `
+          <button onclick="saveEvent()">Save</button>
+          <button onclick="closePopup()">Cancel</button>
+        `;
+
+        popupOverlay.style.display = "flex";
+      };
     });
-  </script>
+  }
+
+  function saveEvent() {
+    const text = eventInput.value.trim();
+    if (text) {
+      savedEvents[activeDateKey] = text;
+      localStorage.setItem("savedEvents", JSON.stringify(savedEvents));
+    }
+    closePopup();
+    renderCalendar(currentDate);
+  }
+
+  function deleteEvent() {
+    if (confirm("Remove this marked event?")) {
+      delete savedEvents[activeDateKey];
+      localStorage.setItem("savedEvents", JSON.stringify(savedEvents));
+      closePopup();
+      renderCalendar(currentDate);
+    }
+  }
+
+  function closePopup() {
+    popupOverlay.style.display = "none";
+  }
+
+  function nextMonth(e) {
+    e.stopPropagation();
+    currentDate.setMonth(currentDate.getMonth() + 1);
+    renderCalendar(currentDate);
+  }
+
+  function prevMonth(e) {
+    e.stopPropagation();
+    currentDate.setMonth(currentDate.getMonth() - 1);
+    renderCalendar(currentDate);
+  }
+
+  document.getElementById("mainContainer").addEventListener("click", function(e) {
+    if (!e.target.closest(".calendar") && !e.target.closest("button") && !e.target.closest(".days div")) {
+      calendar.classList.toggle("expanded");
+    }
+  });
+
+  renderCalendar(currentDate);
+</script>
 </body>
 </html>
