--- a/index.html
+++ b/index.html
@@ -17,290 +17,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
-  <title> Soft Clock & Calendar</title>
-
+  <title>Soft Clock & Calendar</title>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" rel="stylesheet">
-  <style>
-  
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Fredoka', sans-serif;
-    }
-
-    body {
-      background: linear-gradient(270deg, #fef6e4, #fde2e4, #e0f7fa, #fff1e6, #e4f0e2);
-      background-size: 800% 800%;
-      animation: bgMove 20s ease infinite;
-      color: #111;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
-
-    @keyframes bgMove {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    .container {
-      background: rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(20px);
-      border-radius: 20px;
-      padding: 25px;
-      max-width: 90vw;
-      text-align: center;
-    }
-
-    .clock {
-      font-size: 6vw;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      flex-wrap: nowrap;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-
-    .clock span {
-      background: #fff;
-      color: #000;
-      padding: 10px 14px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-
-    .day-info {
-      margin-top: 10px;
-      font-size: 1.1rem;
-      opacity: 0.7;
-    }
-
-    .tap-hint {
-      margin-top: 5px;
-      font-size: 0.85rem;
-      color: #666;
-    }
-
-    .calendar {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.6s ease;
-      margin-top: 20px;
-    }
-
-    .calendar.expanded {
-      max-height: 600px;
-    }
-
-    .month-nav {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      margin: 15px 0;
-      font-size: 1.2rem;
-    }
-
-    .month-nav button {
-      background: #fff;
-      border: none;
-      padding: 8px 14px;
-      font-size: 1.1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-
-    .weekdays, .days {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 6px;
-      margin-top: 5px;
-    }
-
-    .weekdays div {
-      font-weight: bold;
-      opacity: 0.6;
-      font-size: 0.9rem;
-    }
-
-    .weekdays div:nth-child(1) {
-      color: red;
-    }
-
-    .days div {
-      aspect-ratio: 1/1;
-      background: transparent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 50%;
-      transition: 0.3s;
-      cursor: pointer;
-      color: #000;
-    }
-
-    .days div:nth-child(7n+1) {
-      color: red;
-    }
-
-    .days div:hover {
-      background: rgba(0,0,0,0.1);
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-
-    .today {
-      background: black !important;
-      color: white !important;
-    }
-
-    @media (max-width: 600px) {
-      .clock {
-        font-size: 8vw;
-      }
-      .month-nav {
-        font-size: 1rem;
-        gap: 12px;
-      }
-    }
-    @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap');
-
-.footer-link {
-  margin-top: 15px;
-  font-size: 0.75rem;
-  font-family: 'Fredoka', sans-serif;
-  opacity: 0.5;
-  text-align: center;
-}
-
-.footer-link a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.footer-link a:hover {
-  text-decoration: underline;
-  opacity: 0.7;
-}
-body {
-  background: linear-gradient(-45deg,
-    #1f1c2c,  /* deep navy */
-    #2c3e50,  /* dark blue grey */
-    #3b3b98,  /* twilight blue */
-    #1a1a2e   /* dark night */
-  );
-  background-size: 400% 400%;
-  animation: darkFlow 25s ease infinite;
-  color: #eee;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-@keyframes darkFlow {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-body {
-  background: linear-gradient(-45deg, #cceeff, #ffe5b4, #ffd6e8, #cceeff);
-  background-size: 500% 500%;
-  animation: softLoop 8s ease-in-out infinite;
-  color: #111;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-@keyframes softLoop {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-.popup-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.4);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
-}
-
-.popup-box {
-  background: rgba(255, 255, 255, 0.85);
-  backdrop-filter: blur(15px);
-  padding: 20px;
-  border-radius: 15px;
-  width: 90%;
-  max-width: 300px;
-  text-align: center;
-  animation: popFade 0.3s ease;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-}
-
-.popup-box h3 {
-  margin-bottom: 10px;
-  font-size: 1.2rem;
-}
-
-.popup-box input {
-  width: 100%;
-  padding: 8px;
-  border-radius: 8px;
-  border: 1px solid #aaa;
-  margin-bottom: 12px;
-  font-size: 1rem;
-}
-
-.popup-buttons button {
-  padding: 7px 14px;
-  border: none;
-  border-radius: 8px;
-  margin: 0 5px;
-  font-weight: bold;
-  cursor: pointer;
-  background: #111;
-  color: #fff;
-}
-
-.popup-buttons button:hover {
-  background: #333;
-}
-
-@keyframes popFade {
-  from {transform: scale(0.8); opacity: 0;}
-  to {transform: scale(1); opacity: 1;}
-}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Popup Box -->
   <div class="popup-overlay" id="popupOverlay">
-  <div class="popup-box">
-    <h3>📌 Mark This Day</h3>
-    <p id="popupDate"></p>
-    <input type="text" id="eventInput" placeholder="What is Special" />
-    <div class="popup-buttons">
-      <button onclick="saveEvent()">Save</button>
-      <button onclick="closePopup()">Cancel</button>
+    <div class="popup-box">
+      <h3>📌 Mark This Day</h3>
+      <p id="popupDate"></p>
+      <input type="text" id="eventInput" placeholder="What is Special" />
+      <div class="popup-buttons">
+        <button onclick="saveEvent()">Save</button>
+        <button onclick="closePopup()">Cancel</button>
+      </div>
     </div>
   </div>
-</div>
+
+  <!-- Main Container -->
   <div class="container" id="mainContainer">
     <div class="clock" id="clock"></div>
     <div class="day-info" id="dayInfo"></div>
     <div class="tap-hint">Tap to expand</div>
 
+    <!-- Calendar -->
     <div class="calendar" id="calendarContainer">
       <div class="month-nav">
         <button onclick="prevMonth(event)">&lt;</button>
@@ -308,139 +49,20 @@ body {
         <button onclick="nextMonth(event)">&gt;</button>
       </div>
       <div class="weekdays">
-        <div>Sun</div><div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
+        <div>Sun</div><div>Mon</div><div>Tue</div>
+        <div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
       </div>
       <div class="days" id="calendarDays"></div>
     </div>
-   <div class="footer-link">
-  <a href="https://monxcode.github.io/monxcode/" target="_blank">Click hare! © MONXCODE – Mohan</a>
-</div>
-    
+
+    <!-- Footer -->
+    <div class="footer-link">
+      <a href="https://monxcode.github.io/monxcode/" target="_blank">
+        Click hare! © MONXCODE – Mohan
+      </a>
+    </div>
   </div>
-<script>
-  function updateClock() {
-    const now = new Date();
-    const h = String(now.getHours()).padStart(2, '0');
-    const m = String(now.getMinutes()).padStart(2, '0');
-    const s = String(now.getSeconds()).padStart(2, '0');
-    document.getElementById("clock").innerHTML = `
-      <span>${h}</span><span>:</span><span>${m}</span><span>:</span><span>${s}</span>
-    `;
-    const day = now.toLocaleString('default', { weekday: 'long' });
-    const date = now.getDate();
-    document.getElementById("dayInfo").textContent = `${day}, ${date}`;
-  }
 
-  setInterval(updateClock, 1000);
-  updateClock();
-
-  const monthYear = document.getElementById("monthYear");
-  const calendarDays = document.getElementById("calendarDays");
-  const calendar = document.getElementById("calendarContainer");
-  const popupOverlay = document.getElementById("popupOverlay");
-  const popupDate = document.getElementById("popupDate");
-  const eventInput = document.getElementById("eventInput");
-  const popupButtons = document.querySelector(".popup-buttons");
-
-  const savedEvents = JSON.parse(localStorage.getItem("savedEvents") || "{}");
-  let currentDate = new Date();
-  let activeDateKey = "";
-  let isEditing = false;
-
-  function renderCalendar(date) {
-    const year = date.getFullYear();
-    const month = date.getMonth();
-    const firstDay = new Date(year, month, 1).getDay();
-    const lastDate = new Date(year, month + 1, 0).getDate();
-
-    monthYear.textContent = date.toLocaleString('default', { month: 'long' }) + ' ' + year;
-    calendarDays.innerHTML = "";
-
-    for (let i = 0; i < firstDay; i++) {
-      calendarDays.innerHTML += `<div></div>`;
-    }
-
-    for (let d = 1; d <= lastDate; d++) {
-      const fullDate = `${year}-${String(month + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}`;
-      const isToday = d === new Date().getDate() &&
-                      month === new Date().getMonth() &&
-                      year === new Date().getFullYear();
-
-      const eventText = savedEvents[fullDate];
-      calendarDays.innerHTML += `
-        <div class="${isToday ? 'today' : ''}" 
-             style="${eventText ? 'background:#4CAF50; color:white; font-weight:bold;' : ''}"
-             title="${eventText || ''}"
-             data-date="${fullDate}">
-          ${d}
-        </div>`;
-    }
-
-    document.querySelectorAll(".days div[data-date]").forEach(div => {
-      div.onclick = () => {
-        activeDateKey = div.getAttribute("data-date");
-        isEditing = savedEvents[activeDateKey] !== undefined;
-
-        popupDate.textContent = activeDateKey;
-        eventInput.value = savedEvents[activeDateKey] || "";
-
-        // Update popup buttons
-        popupButtons.innerHTML = isEditing ? `
-          <button onclick="saveEvent()">Update</button>
-          <button onclick="deleteEvent()">Remove</button>
-          <button onclick="closePopup()">Cancel</button>
-        ` : `
-          <button onclick="saveEvent()">Save</button>
-          <button onclick="closePopup()">Cancel</button>
-        `;
-
-        popupOverlay.style.display = "flex";
-      };
-    });
-  }
-
-  function saveEvent() {
-    const text = eventInput.value.trim();
-    if (text) {
-      savedEvents[activeDateKey] = text;
-      localStorage.setItem("savedEvents", JSON.stringify(savedEvents));
-    }
-    closePopup();
-    renderCalendar(currentDate);
-  }
-
-  function deleteEvent() {
-    if (confirm("Remove this marked event?")) {
-      delete savedEvents[activeDateKey];
-      localStorage.setItem("savedEvents", JSON.stringify(savedEvents));
-      closePopup();
-      renderCalendar(currentDate);
-    }
-  }
-
-  function closePopup() {
-    popupOverlay.style.display = "none";
-  }
-
-  function nextMonth(e) {
-    e.stopPropagation();
-    currentDate.setMonth(currentDate.getMonth() + 1);
-    renderCalendar(currentDate);
-  }
-
-  function prevMonth(e) {
-    e.stopPropagation();
-    currentDate.setMonth(currentDate.getMonth() - 1);
-    renderCalendar(currentDate);
-  }
-
-  document.getElementById("mainContainer").addEventListener("click", function(e) {
-    if (!e.target.closest(".calendar") && !e.target.closest("button") && !e.target.closest(".days div")) {
-      calendar.classList.toggle("expanded");
-    }
-  });
-
-  renderCalendar(currentDate);
-</script>
+  <script src="script.js"></script>
 </body>
 </html>
