--- a/index.html
+++ b/index.html
@@ -1,68 +1,60 @@
-<!--   
-  ------------------------------------------------------------  
-  © 2025 MONXCODE™ | All Rights Reserved  
-  Created by: Mohan Singh Parmar  
-  
-  This project (including code, design, and logic) is protected  
-  under proprietary rights. Unauthorized copying, editing,   
-  reuploading, or commercial usage is strictly prohibited.  
-  
-  For license, permission, or collaborations:  
-  📩 Email: parmarmohansingh26@gmail.com  
-  ------------------------------------------------------------  
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="color-scheme" content="light">
-  <title>Soft Clock & Calendar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="color-scheme" content="light">
+<title>Soft Clock & Calendar</title>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Popup Box -->
-  <div class="popup-overlay" id="popupOverlay">
-    <div class="popup-box">
-      <h3>📌 Mark This Day</h3>
-      <p id="popupDate"></p>
-      <input type="text" id="eventInput" placeholder="What is Special" />
-      <div class="popup-buttons">
-        <button onclick="saveEvent()">Save</button>
-        <button onclick="closePopup()">Cancel</button>
-      </div>
+
+<div class="popup-overlay" id="popupOverlay">
+  <div class="popup-box">
+    <h3>📌 Mark This Day</h3>
+    <p id="popupDate"></p>
+    <input type="text" id="eventInput" placeholder="What is Special" />
+    <div class="event-repeat">
+      <label><input type="radio" name="repeat" value="once" checked> Once</label>
+      <label><input type="radio" name="repeat" value="always"> Always</label>
     </div>
+    <div class="popup-buttons"></div>
   </div>
+</div>
 
-  <!-- Main Container -->
-  <div class="container" id="mainContainer">
-    <div class="clock" id="clock"></div>
-    <div class="day-info" id="dayInfo"></div>
-    <div class="tap-hint">Tap to expand</div>
-
-    <!-- Calendar -->
-    <div class="calendar" id="calendarContainer">
-      <div class="month-nav">
-        <button onclick="prevMonth(event)">&lt;</button>
-        <div id="monthYear"></div>
-        <button onclick="nextMonth(event)">&gt;</button>
-      </div>
-      <div class="weekdays">
-        <div>Sun</div><div>Mon</div><div>Tue</div>
-        <div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
-      </div>
-      <div class="days" id="calendarDays"></div>
-    </div>
-
-    <!-- Footer -->
-    <div class="footer-link">
-      <a href="https://monxcode.github.io/monxcode/" target="_blank">
-        Click hare! © MONXCODE – Mohan
-      </a>
-    </div>
+<div class="roller-overlay" id="rollerOverlay">
+  <div class="roller-box">
+    <h3>Select Date</h3>
+    <select id="rollDay"></select>
+    <select id="rollMonth"></select>
+    <select id="rollYear"></select>
+    <br>
+    <button onclick="applyRoller()">Apply</button>
   </div>
+</div>
 
-  <script src="script.js"></script>
+<div class="container" id="mainContainer">
+  <div class="clock" id="clock"></div>
+  <div class="day-info" id="dayInfo"></div>
+  <div class="tap-hint">Tap to expand</div>
+  <div class="calendar" id="calendarContainer">
+    <div class="month-nav" id="monthNav">
+      <button onclick="prevMonth(event)">&lt;</button>
+      <div id="monthYear" onclick="openRoller()"></div>
+      <button onclick="nextMonth(event)">&gt;</button>
+    </div>
+    <div class="weekdays">
+      <div>Sun</div><div>Mon</div><div>Tue</div><div>Wed</div>
+      <div>Thu</div><div>Fri</div><div>Sat</div>
+    </div>
+    <div class="days" id="calendarDays"></div>
+  </div>
+  <div class="footer-link">
+    <a href="https://monxcode.github.io/monxcode/" target="_blank">Click hare! © MONXCODE – Mohan</a>
+  </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
