--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="days" id="calendarDays"></div>
   </div>
   <div class="footer-link">
-    <a href="https://monxcode.github.io/monxcode/" target="_blank">Click hare! © MONXCODE – Mohan</a>
+    <a href="https://monxcode.github.io/monxcode-portfolio/" target="_blank">Click hare! © MONXCODE – Mohan</a>
   </div>
 </div>
 
